[project]
name = "idealDjango"
version = "0.0.1"
authors = [
  { name="Amir Shahsafi", email="meshahsafi@gmail.com" },
]
description = "an ideal template for Django projects"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mrShahsafi/ideal-django/tree/package"
"Bug Tracker" = "https://github.com/mrShahsafi/ideal-django/tree/package/issues"